<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.macuser.materialdesignappformulario.ConfirmActivity">


    <TextView
        android:id="@+id/tv_confirm_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="@string/confirm_title"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tv_confirm_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/label_NA"
        />

    <TextView
        android:id="@+id/tv_confirm_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/label_NA"
        />

    <TextView
        android:id="@+id/tv_confirm_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/label_NA"
        />

    <TextView
        android:id="@+id/tv_confirm_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/label_NA"
        />

    <TextView
        android:id="@+id/tv_confirm_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/label_NA"
        />

    <Button
        android:id="@+id/btn_edit_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_data"
        />

    </LinearLayout>